Week-2/Vpc_Network_Architecture_Project/Vpc.tf
resource "aws_vpc" "ICP-VPC" {
  enable_dns_hostnames = true
  enable_dns_support = true
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "ICP-VPC"
  }
}
